--- a/estilo.css
+++ b/estilo.css
@@ -200,7 +200,14 @@ li {
 
 @media screen and (max-width:798px){
 
+    header{
+        background-color: aqua;
+        width: 100%;
+    }
+
+
     footer{
+        width: 100%;
         position: relative;
         right: 0;
         left: 0;
@@ -214,4 +221,5 @@ li {
    
     
 }
+
 
