--- a/estilo.css
+++ b/estilo.css
@@ -198,14 +198,17 @@ li {
     left: 450px; 
 }
 
-@media screen and (min-width:798px){
+@media screen and (max-width:798px){
 
     header{
         background-color: aqua;
         width: 100%;
+        position: relative;
+        right: 0;
+        left: 0;
     }
      .btn{
-        font-size: 5px;
+        
     }
 
 
@@ -224,5 +227,4 @@ li {
    
     
 }
-
 
