--- a/estilo.css
+++ b/estilo.css
@@ -208,13 +208,14 @@ li {
         left: 0;
     }
      .btn{
-        color:#f8f9fa;
-        padding: 15px 15px;
-        background-color: black;
-        border-radius: 10px ;
-        cursor: pointer;
-        font-size: 25px;
-        width: 1px;
+         background-color: aqua;
+        width: 100%;
+        justify-content: center;
+        text-align: center;
+
+        position: relative;
+        right: 0;
+        left: 0;
     }
 
 
