--- a/estilo.css
+++ b/estilo.css
@@ -203,15 +203,16 @@ li {
     header{
         background-color: aqua;
         width: 100%;
-        display: block;
-        justify-content: center;
-        text-align: center;
-
         position: relative;
         right: 0;
         left: 0;
+        
     }
-    
+
+    nav{
+        
+    }
+
 
     footer{
         width: 100%;
@@ -228,4 +229,6 @@ li {
    
     
 }
+
+
 
