--- a/estilo.css
+++ b/estilo.css
@@ -214,7 +214,7 @@ li {
         display: flex;
         justify-content: center;
         text-align: center;
-        width: 100%;
+       s
 
 
     }
