--- a/estilo.css
+++ b/estilo.css
@@ -237,21 +237,63 @@ li {
 }
 
 
-@media screen and (max-width:720px){
+@media screen and (max-width:720px) {
 
+    *{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+
+    header{
+        text-align: center;
+        height: 400px;
+        position: relative;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size:x-large;
+        top: 0;
+        max-width: 100%;
+    }
+    .navbar{
+        margin-top: 100px;
+    }
+
+    #myP{
+        margin-top: 40px;
+
+    }
+
+    header h5{
+        margin-top: 20px;
+
+    }
+    .habiliades{
+        margin-top: 50px;
+    }
+
+    body{
+        width:100%;
+    }
     footer{
+        text-align: center;
         
-        width: 100%;
+        position: relative;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+       
+        top: 0;
+        min-width: 100%;
+    
     }
 
     footer .roda{
+        width: 50px;
         display: flex;
         justify-content: center;
-        text-align: center;
+        align-items: center;
         position: relative;
-        right: 280px;
-
+        right: 100px;
     }
+    
 }
 
 
