--- a/estilo.css
+++ b/estilo.css
@@ -338,11 +338,11 @@ li {
 
     footer .roda{
         width: 50px;
-        display: flex;
+        display: grid;
         justify-content: center;
         align-items: center;
         position: relative;
-        right: 100px;
+        right: 250px;
     }
     
 }
