--- a/estilo.css
+++ b/estilo.css
@@ -338,7 +338,7 @@ li {
 
     footer .roda{
         width: 50px;
-        display: grid;
+        display: flex;
         justify-content: center;
         align-items: center;
         position: relative;
