--- a/estilo.css
+++ b/estilo.css
@@ -12,199 +12,93 @@
     text-align: center;
     height: 400px;
     position: relative;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size:x-large;
-    top: 0;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size:20px;
+    margin-block:inherit;
+    top: 30px;
     min-width: 100%;
- 
+    color: #fff;
+     
     
 }
 
-
-   
+img{
+    width: 200px; 
+    height: 200px;
+    overflow: hidden; /* Para cortar qualquer parte que ultrapasse */
+    border-radius: 50%; 
     
-
-nav{
-
-    margin-top: 2.5rem;
-    display: flex;
-    /*define o tamanho dos lados dos elementos*/
-    grid-gap: 1.2rem;
-    justify-content: center;
+}
+.photo{
+    position: relative;
+    top: 20px;
+    width: 100%; 
+    height: auto;
+    border-radius: 50%;
+    
 }
 
-.btn{
-    color:#f8f9fa;
-    padding: 15px 15px;
-    background-color: black;
-    border-radius: 10px ;
-    cursor: pointer;
-    font-size: 25px;
-}
 
 body{
-    background-color:#e85d04;
-    opacity: 0.9;
+    background-color:#000;
     padding: 0;
     margin: 0;
     
    
-   
 }
-
-a{
-    text-decoration: none;
-}
-.btn:hover{
-    background-color:#eaf4f4;
-    color: #f35b04;
-  
-
-}
-
-.habiliades{
+.porje{
     text-align: center;
-    height: 50%;
+    height: 400px;
     position: relative;
-
-  
-}
-
-.jobs{
-    display: flex;
-    grid-gap: 1.2rem;
-    text-align: center;
-    justify-content: center;
-    font-size: larger;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: #f8f9fa;
+    font-size:22px;
+    top: 110px;
+    min-width: 100%;
+    color: #fff;
+
 }
 
-
-
-.currilo{
+.all-Project {
     display: flex;
-    justify-content: center;
-    margin-top: 50px;
-    height: 80px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    justify-content: space-around;
+    gap: 1px; 
     
-}
-
-.currilo button{
-    color:#f8f9fa;
-    padding: 15px 15px;
-    background-color: black;
-    border-radius: 10px ;
-    cursor: pointer;
-    font-size: 35px;
-}
-
-.currilo:hover button{
-    background-color:#eaf4f4;
-    color: #f35b04;
-}
-
-
-img{
-    max-width: 100%;
-    height: 250px;
-    width: 300px;
-    border: 5px solid black;
-}
-
-img:hover{
-    transform: translate(-10px,-10px);
-    
-
-}
-
-.secao-2{
-    max-width: 100%;
-
  
 }
 
-.secao-2 h1{
-    justify-content: center;
+.all-Project div{
+    background-color: #f4f4f4;
+    padding: 20px;/* da espaço dentro da div sem deixar o conteudo colado entre as bordas*/
+    border: 1px solid #ccc;
     text-align: center;
-    display: flex;
+    width: 200px;
+    border-radius: 8px;
+    margin-top: -130px;
 }
 
-
-.project{
+.all-Project2{
     display: flex;
-    flex-wrap: wrap;
-    grid-gap: 1.2rem;
-    margin-top: 5%;
-    left: 0;
-    right: 0;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-  
-}
-.project img{
-    max-width: 100%;
+    justify-content: space-around;
+    gap: 1px; 
 
 }
+.all-Project2 div {
+    background-color: #f4f4f4;
+    padding: 20px;/* da espaço dentro da div sem deixar o conteudo colado entre as bordas*/
+    border: 1px solid #ccc;
+    text-align: center;
+    width: 200px;
+    border-radius: 8px;
+    margin-top: 20px;
+ 
+}
 
-
-.project-2 h1{
-    display: flex;
-    position: relative;
-    margin-top: -50%;
-    left: 575%;
     
-
-}
-.project-3{
-    
-    display: flex;
-    flex-wrap: wrap;
-    grid-gap: 1.2rem;
-    margin-top: 5%;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-}
-
-footer{
-   background-color: #14213d;
-   color: #fff;
-   display: flex;
-   left: 0;
-   right: 0;
-   height:90px;
-   margin-top: 1em;
-   padding: 10px;
-   bottom: 0;
-
-
-  
-    
-}
-.roda{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    grid-gap: 1.2rem;
-    align-items: cente;
-}
-li { 
-    color: aliceblue;
-    list-style-type: none;
-    position: relative;
-    left: 450px; 
-}
-
-/** media query*/
-
-
 @media screen and (max-width:768px)  {
      body{
         background-color:#e85d04;
         margin: 0px auto;
+        
 
      }
 
@@ -273,30 +167,58 @@ li {
 @media screen and (max-width:481px) {
     body{
         margin: 0;
+        background-color:#000;
     }
 
-    .jobs{
-        width: 99%;
-        background-color: #000;
-        margin: 0 ;
-        position: relative;
-        top:-30px;
-        align-items: center;
-        justify-content: center;
-        height: 140px;
-    }
-    footer{
-        width: 99%;
-    }
-    footer .roda{
-        width: 50%;
-        justify-content: space-between;
+
+    /* projetos*/
+    .porje{
+    
         text-align: center;
-        justify-content: center;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
+        height: 400px;
         position: relative;
-        right: 350px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size:40px;
+        top: 160px;
+        min-width: 100%;
+        color: #fff;
+        
     }
+    .all-Project {
+        display: flex;
+        justify-content: space-around;
+        gap: 1px; 
+        flex-wrap: wrap;
+        margin-top: -150px;
+     
+    }
+    
+    .all-Project div{
+        background-color: #f4f4f4;
+        padding: 20px;/* da espaço dentro da div sem deixar o conteudo colado entre as bordas*/
+        border: 1px solid #ccc;
+        text-align: center;
+        width: 200px;
+        border-radius: 8px;
+        margin-top: 20px;
+    }
+    
+    .all-Project2{
+        display: flex;
+        justify-content: space-around;
+        gap: 1px; 
+        flex-wrap: wrap;
+    }
+    .all-Project2 div {
+        background-color: #f4f4f4;
+        padding: 20px;/* da espaço dentro da div sem deixar o conteudo colado entre as bordas*/
+        border: 1px solid #ccc;
+        text-align: center;
+        width: 200px;
+        border-radius: 8px;
+        margin-top: 20px;
+    
+     
+    }
+    
 }
