--- a/estilo.css
+++ b/estilo.css
@@ -102,70 +102,7 @@ body{
 
      }
 
-    .links nav{
-        
-        display: flex;
-        justify-content: space-between;
-        grid-gap: 0.0rem;
-    }
-    .links button {
-        width: 89%;
-        
-    }
-
-
-    
-     .jobs{
-        width: 100%;
-        background-color: #000;
-        border-style: groove;
-        position: relative;
-        top:-30px;
-        align-items: center;
-        justify-content: center;
-        height: 140px;
-     }
-     .jobs-1 .jobs-2 {
-        
-        display: flex;
-        flex-direction: column;
-        gap: 2.2rem;
-     }
-     .project article{
-        width:60%;
-        position: relative;
-        display: flex;
-        text-align: center;
-        padding: 1rem ;
-        justify-content: center
-     }
-     .project-3 article{
-        width:60%;
-        position: relative;
-        display: flex;
-        text-align: center;
-        padding: 1rem ;
-        justify-content: center
-     }
-     footer{
-        width: 100%;
-
-     }
-     footer ul{
-        width: 50%;
-        justify-content: space-between;
-        text-align: center;
-        justify-content: center;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        position: relative;
-        right: 125px;
-     }
-}
-
-@media screen and (max-width:481px) {
-    body{
+     body{
         margin: 0;
         background-color:#000;
     }
@@ -199,6 +136,68 @@ body{
         border: 1px solid #ccc;
         text-align: center;
         width: 200px;
+        border-radius: 8px;
+        margin-top: 20px;
+    }
+    
+    .all-Project2{
+        display: flex;
+        justify-content: space-around;
+        gap: 1px; 
+        flex-wrap: wrap;
+    }
+    .all-Project2 div {
+        background-color: #f4f4f4;
+        padding: 20px;/* da espaço dentro da div sem deixar o conteudo colado entre as bordas*/
+        border: 1px solid #ccc;
+        text-align: center;
+        width: 200px;
+        border-radius: 8px;
+        margin-top: 20px;
+    
+     
+    }
+}
+
+@media screen and (max-width:481px ) {
+    body{
+        margin: 0;
+        background-color:#000;
+    }
+
+    .my p{
+        padding: 20px;
+        margin-top: 10px;
+    }
+
+    /* projetos*/
+    .porje{
+    
+        text-align: center;
+        min-height: 400px;
+        position: relative;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size:40px;
+        top: 320px;
+        min-width: 100%;
+        color: #fff;
+        
+    }
+    .all-Project {
+        display: flex;
+        justify-content: space-around;
+        gap: 10px; 
+        flex-wrap: wrap;
+        margin-top: 190px;
+     
+    }
+    
+    .all-Project div{
+        background-color: #f4f4f4;
+        padding: 20px;/* da espaço dentro da div sem deixar o conteudo colado entre as bordas*/
+        border: 1px solid #ccc;
+        text-align: center;
+        width: 50%;
         border-radius: 8px;
         margin-top: 20px;
     }
